# Email_securtiy_Agent

./: .env  Dockerfile  README.md  VIRUSTOTAL_SETUP.md  deploy.sh  email.eml  pyproject.toml  requirements.txt  test_email.eml
email_analyzer/: __init__.py  agent.py  prompts.py  tools.py  virustotal_tools.py
